--- a/index.html
+++ b/index.html
@@ -32,7 +32,7 @@
         <!-- Hero Section -->
         <section class="relative h-[500px] overflow-hidden">
             <div class="absolute inset-0">
-                <img src="..\images\woman.png"
+                <img src="images\woman.png"
                     alt="Premium Products" class="w-full h-full object-cover">
                 <div class="absolute inset-0 bg-gradient-to-r from-indigo-900/70 to-purple-900/70"></div>
             </div>
@@ -146,7 +146,7 @@
         </div>
     </footer>
 
-    <script src="script.js"></script>
+    <script src="src/script.js"></script>
 </body>
 
 </html>
